2011-05-08    <zag@manzanillo>

	* bl/vl/sample/kb/drivers/omero/data_object.py
	(DataObject.__init__): added support for proxy propagation. This
	should be fixed in a systematic way.

2011-05-05    <zag@manzanillo>

	* bl/vl/app/importer/plate_well.py (Recorder): Added prefetching support.

2011-05-03    <zag@manzanillo>

	* bl/vl/app/importer/individual.py (Recorder.record): clean up.

	* bl/vl/individual/kb/drivers/omero/proxy.py (Proxy.get_enrolled): Added.

2011-04-30    <zag@manzanillo>

	* bl/vl/sample/kb/drivers/omero/samples_container.py (TiterPlate):
	moved barcode, label and virtualContainer handling to superclass

	* tests/bl/vl/individual/kb/test_ikb.py (TestIKB.test_enrollment): in phase ...

	* bl/vl/individual/kb/drivers/omero/individual.py (Individual): in phase ...

	* bl/vl/sample/kb/drivers/omero/study.py (Study): in phase with ...

	* bl/vl/individual/kb/drivers/omero/enrollment.py 
	(Enrollment): in phase with new convoluted...

	* bl/vl/sample/kb/drivers/omero/proxy_core.py (ProxyCore.save):
	Added support for the convoluted dynamic object fetching mechanism.

	* bl/vl/sample/kb/drivers/omero/wrapper.py (OmeroWrapper): Added a
	convoluted mechanism to allow dynamic object fetching.

2011-04-28    <zag@manzanillo>

	* bl/vl/app/importer/plate_well.py (Recorder): same as below...

	* bl/vl/app/importer/titer_plate.py (Recorder):  same as below...

	* bl/vl/app/importer/blood_sample.py (import_blood_sample_implementation): same as below..

	* bl/vl/app/importer/bio_sample.py (BioSampleRecorder): added
	keep_tokens support. Humm, why am i not using **kw???

	* bl/vl/app/importer/core.py (Core.__init__): added keep_tokens support.

	* bl/vl/app/importer/individual.py (Recorder): added keep_tokens support.

	* tools/importer (App.make_parser): added keep-token flag

	* tests/bl/vl/sample/kb/test_skb.py (OME_KEEP): in phase with new
	keep_section_open mechanism.

	* bl/vl/sample/kb/drivers/omero/proxy_core.py (ProxyCore): Added a